<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lisp Interpreter</string>
    <string name="textview_fname">File name</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_clear">Clear</string>
    <string name="action_lActivity">Last Activity</string>
    <string name="action_oFile">Open File</string>
    <string name="action_sFile">Save File</string>
    <string name="action_execute">Execute</string>
    <string name="action_samples">Samples</string>
    <string name="action_back">Back</string>
    <string name="action_documentation">Documentation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sfile">LISPCompiler</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_show">Show</string>
    <string name="textview_numbering">1</string>
    <string name="textview_default"></string>
    <string name="activity_main_name">Editor</string>
    <string name="activity_console_name">Console</string>
    <string name="title_activity_documentation">Documentation</string>
    

    <string name="settings_summary_1">Appearance</string>
    <string name="settings_summary_2">Behaviour</string>
    <string name="settings_title_1">Appearance</string>
    <string name="settings_title_2">Behaviour</string>
    
</resources>
