<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_samples"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_samples"/>
    <item
        android:id="@+id/action_documentation"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/action_documentation"/>
    <item
        android:id="@+id/action_lActivity"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_lActivity"/>
    <item
        android:id="@+id/action_oFile"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_oFile"/>
    <item
        android:id="@+id/action_sFile"
        android:orderInCategory="500"
        android:showAsAction="never"
        android:title="@string/action_sFile"/>
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="600"
        android:showAsAction="never"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/action_execute"
        android:orderInCategory="700"
        android:showAsAction="never"
        android:title="@string/action_execute"/>

</menu>