<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="120dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView_fname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview_fname" />

    <EditText
        android:id="@+id/editText_fname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine|textNoSuggestions" >
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_fname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />
    </LinearLayout>

</LinearLayout>